--- a/disponibilidade_red.html
+++ b/disponibilidade_red.html
@@ -35,8 +35,7 @@
                 <div class="col-lg-8 offset-lg-2">
                     <div class="home-wrapper text-center">
                         <a href="index.html">
-                            <h3 data-aos="fade" data-aos-offset="200" data-aos-delay="250" data-aos-duration="0">
-                                Ginásio XPTO</h3>
+                            <h3>Ginásio XPTO</h3>
                         </a>
                     </div>
                 </div>
