--- a/index_red.html
+++ b/index_red.html
@@ -51,7 +51,7 @@
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
                     <div class="home-wrapper text-center">
-                        <h2><b>Podem entrar até <b>6</b> pessoas</b></h2>
+                        <h2><b>No interior estão <b>50</b> pessoas</b></h2>
                     </div>
                 </div>
             </div>
