--- a/index_red.html
+++ b/index_red.html
@@ -91,10 +91,10 @@
             <a href="./disponibilidade_red.html">
                 <div class="gal-detail-red thumb text-center" data-aos="fade" data-aos-offset="200" data-aos-delay="450"
                     data-aos-duration="1000">
-                    <img src="./Images/Desocupacao_red_version.jpg" class="thumb-img" alt="work-thumbnail">
+                    <img src="./Images/Desocupacao_sinal_red_version.jpg" class="thumb-img" alt="work-thumbnail">
             </a>
             <h4><a href="./disponibilidade_red.html">Disponibilidade</a></h4><br>
-            <i class="fa fa-ban" style="font-size:48px;color:#FF0000"></i>
+            <i class="fa fa-thumbs-down" style="font-size:48px;color:#FF0000"></i>
         </div>
         </div>
 
